syntax = "proto3";

package xai_api;

option go_package = "github.com/ZaguanLabs/xai-sdk-go/proto/gen/go/xai/v1;xaiv1";

import "google/protobuf/timestamp.proto";
import "xai/v1/chat.proto";  // For FinishReason
import "xai/v1/usage.proto";  // For SamplingUsage

message SampleChoice {
  FinishReason finish_reason = 1;
  int32 index = 2;
  string text = 3;
}

message SampleTextRequest {
  repeated string prompt = 1;
  string model = 3;
  bool logprobs = 5;
  int32 top_logprobs = 6;
  int32 max_tokens = 7;
  int32 n = 8;
  float presence_penalty = 9;
  int32 seed = 11;
  repeated string stop = 12;
  float frequency_penalty = 13;
  float temperature = 14;
  float top_p = 15;
  string user = 17;
}

message SampleTextResponse {
  string id = 1;
  repeated SampleChoice choices = 2;
  google.protobuf.Timestamp created = 5;
  string model = 6;
  string system_fingerprint = 7;
  SamplingUsage usage = 9;
}
